--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,12 @@ target/
 # OS
 .DS_Store
 Thumbs.db
+
+# Environment files
 .env
+
+# Cargo authentication
+.cargo/credentials.toml
+
+# Docker secrets (temporary files)
+.bsr_token_secret
