--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
 thiserror = "1.0"
+prost = "0.13"
+prost-types = "0.13"
+xid = "1.1"
