--- a/crates/ponix-all-in-one/Cargo.toml
+++ b/crates/ponix-all-in-one/Cargo.toml
@@ -18,3 +18,9 @@ tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 config = { version = "0.14", features = ["toml"] }
+
+# Protobuf support
+ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
+prost = { workspace = true }
+prost-types = { workspace = true }
+xid = { workspace = true }
