feat: adds processed envelope producer and consumer

--- a/.mise.toml
+++ b/.mise.toml
@@ -8,4 +8,4 @@ rust = "latest"
 _.file = '.env'
 
 [tasks.install-tools]
-run = "mise install && brew install goose"
+run = "mise install && brew install goose && brew tap nats-io/nats-tools && brew install nats-io/nats-tools/nats"
