--- a/crates/ponix-nats/Cargo.toml
+++ b/crates/ponix-nats/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 async-nats = "0.37"
+async-trait = "0.1"
+bytes = "1.0"
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
@@ -20,3 +22,6 @@ xid = { version = "1.1", optional = true }
 default = []
 # Enable ProcessedEnvelope-specific producer and processor
 processed-envelope = ["ponix-proto", "prost", "xid"]
+
+[dev-dependencies]
+mockall = "0.13"
