--- a/crates/ponix-clickhouse/Cargo.toml
+++ b/crates/ponix-clickhouse/Cargo.toml
@@ -24,6 +24,9 @@ chrono = { version = "0.4", features = ["serde"] }
 ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
 prost-types = { workspace = true }
 
+# Migration runner
+goose = { path = "../goose" }
+
 [dev-dependencies]
 testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["clickhouse"] }
