--- a/docker/docker-compose.deps.yaml
+++ b/docker/docker-compose.deps.yaml
@@ -39,6 +39,25 @@ services:
         soft: 262144
         hard: 262144
 
+  postgres:
+    image: postgres:16
+    container_name: ponix-postgres
+    environment:
+      POSTGRES_USER: ponix
+      POSTGRES_PASSWORD: ponix
+      POSTGRES_DB: ponix
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - ponix
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ponix"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 networks:
   ponix:
     name: ponix
@@ -47,4 +66,6 @@ volumes:
   nats-data:
     driver: local
   clickhouse-data:
+    driver: local
+  postgres-data:
     driver: local
