feat: adds domain crate with end device service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/ponix-all-in-one",
     "crates/goose",
     "crates/ponix-postgres",
+    "crates/ponix-domain",
 ]
 resolver = "2"
 
