--- a/crates/ponix-postgres/Cargo.toml
+++ b/crates/ponix-postgres/Cargo.toml
@@ -30,10 +30,15 @@ chrono = { version = "0.4", features = ["serde"] }
 # Migration runner
 goose = { path = "../goose" }
 
+# Domain layer dependency
+ponix-domain = { path = "../ponix-domain" }
+async-trait = "0.1"
+
 [dev-dependencies]
 tokio-test = "0.4"
 testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["postgres"] }
+which = "7.0"
 
 [features]
 default = []
