--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "crates/goose",
     "crates/ponix-postgres",
     "crates/ponix-domain",
+    "crates/ponix-grpc",
 ]
 resolver = "2"
 
