--- a/docker/docker-compose.service.yaml
+++ b/docker/docker-compose.service.yaml
@@ -7,6 +7,8 @@ services:
   ponix-all-in-one:
     image: ponix-all-in-one:latest
     container_name: ponix-all-in-one
+    ports:
+      - "50051:50051"   # gRPC server
     environment:
       # Service configuration
       PONIX_LOG_LEVEL: debug
@@ -38,6 +40,10 @@ services:
       PONIX_POSTGRES_PASSWORD: "ponix"
       PONIX_POSTGRES_MIGRATIONS_DIR: "/home/ponix/migrations/postgres"
       PONIX_POSTGRES_GOOSE_BINARY_PATH: "/usr/local/bin/goose"
+
+      # gRPC configuration
+      PONIX_GRPC_HOST: "0.0.0.0"
+      PONIX_GRPC_PORT: "50051"
     depends_on:
       - nats
       - clickhouse
