--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/ponix-postgres",
     "crates/ponix-domain",
     "crates/ponix-grpc",
+    "crates/ponix-payload",
 ]
 resolver = "2"
 
@@ -27,3 +28,5 @@ thiserror = "1.0"
 prost = "0.13"
 prost-types = "0.13"
 xid = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
