--- a/crates/ponix-nats/Cargo.toml
+++ b/crates/ponix-nats/Cargo.toml
@@ -15,9 +15,13 @@ tracing = "0.1"
 
 # Protobuf support (optional)
 prost = { version = "0.13", optional = true }
+prost-types = { version = "0.13", optional = true }
+serde_json = { version = "1.0", optional = true }
+chrono = { version = "0.4", optional = true }
 
 # ProcessedEnvelope-specific dependencies (optional)
 ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf", optional = true }
+ponix-domain = { path = "../ponix-domain", optional = true }
 xid = { version = "1.1", optional = true }
 
 [features]
@@ -25,7 +29,7 @@ default = []
 # Enable generic protobuf batch processor
 protobuf = ["prost"]
 # Enable ProcessedEnvelope-specific producer and processor
-processed-envelope = ["ponix-proto", "protobuf", "xid"]
+processed-envelope = ["ponix-proto", "protobuf", "xid", "ponix-domain", "prost-types", "serde_json", "chrono"]
 
 [dev-dependencies]
 mockall = "0.13"
