--- a/crates/ponix-domain/Cargo.toml
+++ b/crates/ponix-domain/Cargo.toml
@@ -10,12 +10,11 @@ anyhow = { workspace = true }
 thiserror = { workspace = true }
 async-trait = "0.1"
 
-# Protobuf types for domain models
-ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
-prost-types = { workspace = true }
+
 chrono = "0.4"
 tracing = { workspace = true }
 xid = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 mockall = "0.13"
