--- a/crates/ponix-nats/Cargo.toml
+++ b/crates/ponix-nats/Cargo.toml
@@ -25,7 +25,7 @@ ponix-domain = { path = "../ponix-domain", optional = true }
 xid = { version = "1.1", optional = true }
 
 [features]
-default = []
+default = ["processed-envelope", "raw-envelope"]
 # Enable generic protobuf batch processor
 protobuf = ["prost"]
 # Enable ProcessedEnvelope-specific producer and processor
