--- a/crates/ponix-all-in-one/Cargo.toml
+++ b/crates/ponix-all-in-one/Cargo.toml
@@ -29,3 +29,14 @@ config = { version = "0.14", features = ["toml"] }
 ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
 prost-types = { workspace = true }
 xid.workspace = true
+
+[features]
+integration-tests = []
+
+[dev-dependencies]
+testcontainers = "0.23"
+testcontainers-modules = { version = "0.11", features = ["postgres", "clickhouse", "nats"] }
+which = "7.0"
+chrono = { workspace = true }
+clickhouse = { version = "0.14", features = ["lz4"] }
+serde_json = "1.0"
