--- a/crates/ponix-grpc/Cargo.toml
+++ b/crates/ponix-grpc/Cargo.toml
@@ -13,6 +13,7 @@ device = ["ponix-proto-prost", "ponix-proto-tonic"]  # Feature flag for device s
 tokio = { workspace = true }
 tokio-util = { workspace = true }
 tonic = "0.12"
+tonic-reflection = "0.12"
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
@@ -22,10 +23,13 @@ async-trait = "0.1"
 ponix-domain = { path = "../ponix-domain" }
 
 # Protobuf types (prost)
-ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251123173225-7646bc8e52d9.1", registry = "buf", optional = true }
+ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251123210325-2b150142b2af.1", registry = "buf", optional = true }
 
 # Protobuf service definitions (tonic)
-ponix-proto-tonic = { package = "ponix_ponix_community_neoeinstein-tonic", version = "0.4.1-20251123173225-7646bc8e52d9.1", registry = "buf", optional = true }
+ponix-proto-tonic = { package = "ponix_ponix_community_neoeinstein-tonic", version = "0.4.1-20251123210325-2b150142b2af.1", registry = "buf", optional = true }
+
+# Buf validate (required for reflection)
+bufbuild_protovalidate_prost = { package = "bufbuild_protovalidate_community_neoeinstein-prost", version = "0.4.0-20250912141014-52f32327d4b0.1", registry = "buf" }
 
 prost-types = { workspace = true }
 chrono = "0.4"
