--- a/crates/ponix-grpc/Cargo.toml
+++ b/crates/ponix-grpc/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 tonic = "0.12"
 tonic-reflection = "0.12"
+protoc-wkt = "1.0"
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
@@ -27,9 +28,6 @@ ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", versi
 
 # Protobuf service definitions (tonic)
 ponix-proto-tonic = { package = "ponix_ponix_community_neoeinstein-tonic", version = "0.4.1-20251123210325-2b150142b2af.1", registry = "buf", optional = true }
-
-# Buf validate (required for reflection)
-bufbuild_protovalidate_prost = { package = "bufbuild_protovalidate_community_neoeinstein-prost", version = "0.4.0-20250912141014-52f32327d4b0.1", registry = "buf" }
 
 prost-types = { workspace = true }
 chrono = "0.4"
