--- a/docker/docker-compose.service.yaml
+++ b/docker/docker-compose.service.yaml
@@ -18,8 +18,12 @@ services:
 
       # NATS configuration
       PONIX_NATS_URL: "nats://ponix-nats:4222"
-      PONIX_NATS_STREAM: "processed_envelopes"
-      PONIX_NATS_SUBJECT: "processed_envelopes.>"
+      PONIX_PROCESSED_ENVELOPES_STREAM: "processed_envelopes"
+      PONIX_PROCESSED_ENVELOPES_SUBJECT: "processed_envelopes.>"
+      PONIX_NATS_RAW_STREAM: "raw_envelopes"
+      PONIX_NATS_RAW_SUBJECT: "raw_envelopes.>"
+      PONIX_NATS_GATEWAY_STREAM: "gateways"
+      PONIX_NATS_GATEWAY_SUBJECT: "gateways.>"
       PONIX_NATS_BATCH_SIZE: "30"
       PONIX_NATS_BATCH_WAIT_SECS: "5"
 
@@ -44,6 +48,10 @@ services:
       # gRPC configuration
       PONIX_GRPC_HOST: "0.0.0.0"
       PONIX_GRPC_PORT: "50051"
+
+      # CDC configuration
+      PONIX_CDC_GATEWAY_ENTITY_NAME: "gateways"
+      PONIX_CDC_GATEWAY_TABLE_NAME: "gateways"
     depends_on:
       - nats
       - clickhouse
