--- a/crates/ponix-postgres/Cargo.toml
+++ b/crates/ponix-postgres/Cargo.toml
@@ -54,6 +54,9 @@ testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["postgres"] }
 which = "7.0"
 mockall = "0.13"
+async-nats = "0.37"
+futures-util = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [features]
 default = []
