--- a/docker/docker-compose.service.yaml
+++ b/docker/docker-compose.service.yaml
@@ -52,6 +52,12 @@ services:
       # CDC configuration
       PONIX_CDC_GATEWAY_ENTITY_NAME: "gateways"
       PONIX_CDC_GATEWAY_TABLE_NAME: "gateways"
+      PONIX_CDC_PUBLICATION_NAME: "ponix_cdc_publication"
+      PONIX_CDC_SLOT_NAME: "ponix_cdc_slot"
+      PONIX_CDC_BATCH_SIZE: "100"
+      PONIX_CDC_BATCH_TIMEOUT_MS: "5000"
+      PONIX_CDC_RETRY_DELAY_MS: "10000"
+      PONIX_CDC_MAX_RETRY_ATTEMPTS: "5"
     depends_on:
       - nats
       - clickhouse
