refactor: breaks apart ponix-all-in-one setup

--- a/crates/ponix-all-in-one/Cargo.toml
+++ b/crates/ponix-all-in-one/Cargo.toml
@@ -5,6 +5,10 @@ edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
+[lib]
+name = "ponix_all_in_one"
+path = "src/lib.rs"
+
 [[bin]]
 name = "ponix-all-in-one"
 path = "src/main.rs"
