--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,9 @@ chrono = "0.4"
 cel-interpreter = "0.10"
 
 # OpenTelemetry
-opentelemetry = { version = "0.27", features = ["trace"] }
-opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
-opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
+opentelemetry = { version = "0.27", features = ["trace", "logs"] }
+opentelemetry_sdk = { version = "0.27", features = ["trace", "logs", "rt-tokio"] }
+opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace", "logs"] }
 opentelemetry-semantic-conventions = "0.27"
 tracing-opentelemetry = "0.28"
 opentelemetry-appender-tracing = "0.27"
