--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -37,6 +37,10 @@ deadpool-postgres = "0.14"
 opentelemetry.workspace = true
 tracing-opentelemetry.workspace = true
 
+# Tower for middleware
+tower = "0.5"
+http = "1.0"
+
 [dev-dependencies]
 mockall = "0.13"
 testcontainers = "0.23"
