--- a/docker/docker-compose.service.yaml
+++ b/docker/docker-compose.service.yaml
@@ -49,6 +49,9 @@ services:
       PONIX_GRPC_HOST: "0.0.0.0"
       PONIX_GRPC_PORT: "50051"
 
+      # Telemetry configuration
+      PONIX_GRPC_IGNORED_PATHS: "/grpc.reflection."
+
       # CDC configuration
       PONIX_CDC_GATEWAY_ENTITY_NAME: "gateways"
       PONIX_CDC_GATEWAY_TABLE_NAME: "gateways"
