--- a/crates/ponix_all_in_one/Cargo.toml
+++ b/crates/ponix_all_in_one/Cargo.toml
@@ -18,7 +18,6 @@ ponix-runner = { path = "../runner" }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 config = { version = "0.14", features = ["toml"] }
@@ -33,14 +32,7 @@ goose = { path = "../goose" }
 ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
 prost-types = { workspace = true }
 xid.workspace = true
-
-# OpenTelemetry
-opentelemetry.workspace = true
-opentelemetry_sdk.workspace = true
-opentelemetry-otlp.workspace = true
-opentelemetry-semantic-conventions.workspace = true
-tracing-opentelemetry.workspace = true
-opentelemetry-appender-tracing.workspace = true
+chrono.workspace = true
 
 [features]
 integration-tests = []
