--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,10 +1,10 @@
 name: Integration Tests
 
 on:
-  pull_request:
-    branches: [main]
-  push:
-    branches: [main]
+  workflow_call:
+    secrets:
+      BSR_TOKEN:
+        required: true
 
 env:
   CARGO_TERM_COLOR: always
@@ -33,17 +33,11 @@ jobs:
       - name: Configure BSR authentication
         run: cargo login --registry buf "Bearer ${{ secrets.BSR_TOKEN }}"
 
-      - name: Cache cargo registry and target
-        uses: actions/cache@v4
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-integration-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-integration-
-            ${{ runner.os }}-cargo-
+          shared-key: "rust-cache"
+          cache-on-failure: true
 
       - name: Run integration tests
         run: mise run test:integration
