--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,10 @@ on:
         required: true
 
 permissions:
-  contents: write
-  packages: write
-  id-token: write
+  contents: write # to create releases and push tags
+  issues: write # to comment on issues
+  pull-requests: write # to comment on PRs
+  id-token: write # if using OIDC
 
 jobs:
   semantic-release:
@@ -28,7 +29,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
 
       - name: Semantic Release
         id: semantic
