--- a/crates/gateway_orchestrator/Cargo.toml
+++ b/crates/gateway_orchestrator/Cargo.toml
@@ -19,6 +19,7 @@ ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", versi
 prost = { version = "0.13" }
 async-nats = "0.37"
 bytes = "1.9"
+tower = "0.5"
 
 [dev-dependencies]
 common = { path = "../common", features = ["testing"] }
