--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,6 @@ opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace", "log
 opentelemetry-semantic-conventions = "0.27"
 tracing-opentelemetry = "0.28"
 opentelemetry-appender-tracing = "0.27"
+
+# Tower middleware
+tower = "0.5"
