--- a/crates/ponix_all_in_one/Cargo.toml
+++ b/crates/ponix_all_in_one/Cargo.toml
@@ -48,3 +48,4 @@ which = "7.0"
 chrono = { workspace = true }
 clickhouse = { version = "0.14", features = ["lz4"] }
 serde_json = "1.0"
+tower = { workspace = true }
