--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ permissions:
   issues: write # to comment on issues
   pull-requests: write # to comment on PRs
   id-token: write # if using OIDC
+  packages: write
 
 jobs:
   unit-tests:
