--- a/crates/gateway_orchestrator/Cargo.toml
+++ b/crates/gateway_orchestrator/Cargo.toml
@@ -20,6 +20,7 @@ prost = { version = "0.13" }
 async-nats = "0.37"
 bytes = "1.9"
 tower = "0.5"
+rumqttc = "0.24"
 
 [dev-dependencies]
 common = { path = "../common", features = ["testing"] }
