--- a/docker/docker-compose.deps.yaml
+++ b/docker/docker-compose.deps.yaml
@@ -81,6 +81,27 @@ services:
       - ponix
     restart: unless-stopped
 
+  emqx:
+    image: emqx/emqx:5.8
+    container_name: ponix-emqx
+    ports:
+      - "1883:1883"     # MQTT
+      - "18083:18083"   # Dashboard
+    environment:
+      EMQX_NAME: ponix-emqx
+      EMQX_ALLOW_ANONYMOUS: "true"
+      EMQX_LISTENER__TCP__EXTERNAL: "1883"
+    volumes:
+      - emqx-data:/opt/emqx/data
+    networks:
+      - ponix
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "emqx_ctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 networks:
   ponix:
     name: ponix
@@ -93,4 +114,6 @@ volumes:
   postgres-data:
     driver: local
   otel-data:
+    driver: local
+  emqx-data:
     driver: local
