--- a/.mise.toml
+++ b/.mise.toml
@@ -9,7 +9,7 @@ grpcurl = "latest"
 _.file = '.env'
 
 [tasks.install-tools]
-run = "mise install && brew install goose && brew tap nats-io/nats-tools && brew install nats-io/nats-tools/nats"
+run = "mise install && brew install goose && brew tap nats-io/nats-tools && brew install nats-io/nats-tools/nats && brew install mosquitto"
 
 # Test tasks - run from workspace root
 [tasks.test]
