refactor: instument payload logic

--- a/.mise.toml
+++ b/.mise.toml
@@ -3,6 +3,7 @@ github-cli = "latest"
 tilt = "latest"
 rust = "latest"
 grpcurl = "latest"
+jq = "latest"
 
 # all envs should be set in a .env file
 [env]
