--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -45,6 +45,10 @@ tracing-subscriber = { workspace = true }
 # Tower for middleware
 tower = { workspace = true }
 http = "1.0"
+tonic-web = { workspace = true }
+tonic-reflection = "0.12"
+tower-http = { workspace = true }
+protoc-wkt = "1.0"
 
 [dev-dependencies]
 mockall = "0.13"
