--- a/crates/gateway_orchestrator/Cargo.toml
+++ b/crates/gateway_orchestrator/Cargo.toml
@@ -6,21 +6,23 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
-serde = { workspace = true }
-tokio-util = { workspace = true }
 common = { path = "../common" }
-tracing = { workspace = true }
-async-trait = "0.1"
-tokio = { workspace = true }
-chrono = "0.4"
-anyhow = { workspace = true }
-futures = "0.3"
+serde.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
+tracing.workspace = true
+async-trait.workspace = true
+chrono.workspace = true
+anyhow.workspace = true
+futures.workspace = true
+prost.workspace = true
+async-nats.workspace = true
+bytes.workspace = true
+tower.workspace = true
+rumqttc.workspace = true
+
+# Protobuf (BSR registry - excluded from workspace)
 ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }
-prost = { version = "0.13" }
-async-nats = "0.37"
-bytes = "1.9"
-tower = "0.5"
-rumqttc = "0.24"
 
 [dev-dependencies]
 common = { path = "../common", features = ["testing"] }
