--- a/crates/gateway_orchestrator/Cargo.toml
+++ b/crates/gateway_orchestrator/Cargo.toml
@@ -21,8 +21,7 @@ bytes.workspace = true
 tower.workspace = true
 rumqttc.workspace = true
 
-# Protobuf (BSR registry - excluded from workspace)
-ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }
+ponix-proto-prost.workspace = true
 
 [dev-dependencies]
 common = { path = "../common", features = ["testing"] }
