--- a/crates/cdc_worker/Cargo.toml
+++ b/crates/cdc_worker/Cargo.toml
@@ -27,8 +27,7 @@ tracing-opentelemetry.workspace = true
 etl.workspace = true
 etl-postgres.workspace = true
 
-# Protobuf (BSR registry - excluded from workspace)
-ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }
+ponix-proto-prost.workspace = true
 
 [dev-dependencies]
 common = { path = "../common", features = ["testing"] }
