--- a/crates/ponix_all_in_one/Cargo.toml
+++ b/crates/ponix_all_in_one/Cargo.toml
@@ -32,8 +32,7 @@ prost-types.workspace = true
 xid.workspace = true
 chrono.workspace = true
 
-# Protobuf (BSR registry - excluded from workspace)
-ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }
+ponix-proto-prost.workspace = true
 
 [features]
 integration-tests = []
