--- a/crates/ponix_api/Cargo.toml
+++ b/crates/ponix_api/Cargo.toml
@@ -15,9 +15,8 @@ chrono.workspace = true
 tonic.workspace = true
 anyhow.workspace = true
 
-# Protobuf (BSR registry - excluded from workspace)
-ponix-proto-tonic = { package = "ponix_ponix_community_neoeinstein-tonic", version = "0.4.1-20251129185957-8f22d4974be0.1", registry = "buf" }
-ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }
+ponix-proto-prost.workspace = true
+ponix-proto-tonic.workspace = true
 
 [features]
 integration-tests = []
