--- a/crates/ponix_api/Cargo.toml
+++ b/crates/ponix_api/Cargo.toml
@@ -14,9 +14,13 @@ tokio-util.workspace = true
 chrono.workspace = true
 tonic.workspace = true
 anyhow.workspace = true
+argon2.workspace = true
 
 ponix-proto-prost.workspace = true
 ponix-proto-tonic.workspace = true
+
+[dev-dependencies]
+common = { path = "../common", features = ["testing"] }
 
 [features]
 integration-tests = []
