--- a/docker/docker-compose.deps.yaml
+++ b/docker/docker-compose.deps.yaml
@@ -5,13 +5,13 @@ services:
     image: nats:latest
     container_name: ponix-nats
     ports:
-      - "4222:4222"  # Client connections
-      - "8222:8222"  # HTTP management
-      - "6222:6222"  # Cluster routing
+      - "4222:4222" # Client connections
+      - "8222:8222" # HTTP management
+      - "6222:6222" # Cluster routing
     command:
-      - "-js"        # Enable JetStream
-      - "-m"         # Enable monitoring
-      - "8222"       # Monitoring port
+      - "-js" # Enable JetStream
+      - "-m" # Enable monitoring
+      - "8222" # Monitoring port
     volumes:
       - nats-data:/data
     restart: unless-stopped
@@ -22,8 +22,8 @@ services:
     image: clickhouse/clickhouse-server:24.10
     container_name: ponix-clickhouse
     ports:
-      - "8123:8123"  # HTTP interface
-      - "9000:9000"  # Native protocol
+      - "8123:8123" # HTTP interface
+      - "9000:9000" # Native protocol
     environment:
       CLICKHOUSE_DB: ponix
       CLICKHOUSE_USER: ponix
@@ -70,9 +70,9 @@ services:
     image: grafana/otel-lgtm:latest
     container_name: ponix-otel-lgtm
     ports:
-      - "3000:3000"   # Grafana UI
-      - "4317:4317"   # OTLP gRPC
-      - "4318:4318"   # OTLP HTTP
+      - "3000:3000" # Grafana UI
+      - "4317:4317" # OTLP gRPC
+      - "4318:4318" # OTLP HTTP
     volumes:
       - otel-data:/data
     environment:
@@ -85,8 +85,8 @@ services:
     image: emqx/emqx:5.8
     container_name: ponix-emqx
     ports:
-      - "1883:1883"     # MQTT
-      - "18083:18083"   # Dashboard
+      - "1883:1883" # MQTT
+      - "18083:18083" # Dashboard
     environment:
       EMQX_NAME: ponix-emqx
       EMQX_ALLOW_ANONYMOUS: "true"
@@ -105,6 +105,7 @@ services:
 networks:
   ponix:
     name: ponix
+    external: true
 
 volumes:
   nats-data:
