feat: refresh token entities

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,9 @@ rumqttc = "0.24"
 mockall = "0.13"
 argon2 = "0.5"
 jsonwebtoken = "9.3"
+rand = "0.8"
+sha2 = "0.10"
+hex = "0.4"
 
 # CDC (Supabase ETL)
 etl = { git = "https://github.com/supabase/etl", branch = "main" }
