feat: implements casbin authz

--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -53,6 +53,12 @@ mockall = { workspace = true, optional = true }
 
 ponix-proto-prost.workspace = true
 
+# Authorization
+casbin = { workspace = true }
+
+[dependencies.tokio-postgres-adapter]
+git = "https://github.com/ponix-dev/casbin-tokio-postgres-adapter.git"
+
 [dev-dependencies]
 mockall.workspace = true
 testcontainers.workspace = true
