--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,3 +90,6 @@ tokio-test = "0.4"
 testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["postgres", "clickhouse", "nats"] }
 which = "7.0"
+
+# Authorization
+casbin = "2"
