ci: remove tilt timeout

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -47,14 +47,7 @@ jobs:
       - name: Start services with Tilt CI
         env:
           BSR_TOKEN: ${{ secrets.BSR_TOKEN }}
-        run: |
-          # Run tilt ci which builds and starts all services, waiting for them to be ready
-          # Timeout after 10 minutes
-          timeout 600 tilt ci || {
-            echo "Tilt CI failed or timed out"
-            tilt down
-            exit 1
-          }
+        run: tilt ci
 
       - name: Wait for services to be healthy
         run: |
