test: adds cdc checks to e2e tests

--- a/docker/docker-compose.deps.yaml
+++ b/docker/docker-compose.deps.yaml
@@ -55,9 +55,9 @@ services:
       - "-c"
       - "wal_level=logical"
       - "-c"
-      - "max_replication_slots=4"
+      - "max_replication_slots=10"
       - "-c"
-      - "max_wal_senders=4"
+      - "max_wal_senders=10"
     networks:
       - ponix
     healthcheck:
